# video_read_transfer

./: README.md  main.py
cpp/: CMakeLists.txt  client.cpp  server.cpp  video_play.cpp  video_read_transfer.files
python/: cli_example.py  cli_serv_without_network.py  client.py  client_real.py  main.py  requirements.txt  serv_example.py  server.py  server_real.py  utils.py
python/tests/: test_video.avi  unittests.py
